--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         contient les information visible de notre page
         <h1>Welcome to our first web page</h1>
+        <p>I want to create my first web page
+        </p>
         <h2>Teach</h2>
         <h3>Discover</h3>
         <h4>Create</h4>
