--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
-<!DOCTYPE html> nous permet de precise d'identifie html5
-<html> la balise mere de notre page
+<!DOCTYPE html> 
+<html> 
     <head>
-        contient les information invisible de notre page
+        <meta charset="utf-8"> 
         <title>My first webpage</title>
-        <meta charset="utf-8"> utf-8 permit us to understand all kind of text
     </head>
     <body>
-        contient les information visible de notre page
         <h1>Welcome to our first web page</h1>
-        <p>I want to create my first web page
-        </p>
-        <h2>Teach</h2>
-        <h3>Discover</h3>
-        <h4>Create</h4>
-        <h5>Share</h5>
+        <h2>Hope you guys will encourage me </h2>
+        <h3>Be focus, observe and learn also</h3>
+        <p>I want to create my first web page using html. </p>
+        <ol>
+            <li>HTML</li>
+            <li>PHP</li>
+            <li>Javascript</li>
+            <li>Mysql</li>
+        </ol>
+        <p>But through out this training you guys will learns</p>
+        <ul>
+            <li>Git and Github</li>
+            <li>Introduction to html</li>
+            <li>Introduction to Php</li>
+            <li>Introduction to Javascript</li>
+            <li>Introduction to Mysql</li>
+        </ul>
+        <p>Hope you guys will enjoy it. bye</p>
     </body>
 </html>
